fix: paths  in examples

--- a/examples/server_integration/client/index.html
+++ b/examples/server_integration/client/index.html
@@ -15,8 +15,8 @@
     <section id="app"></section>
     <script type="module">
         // https://rustwasm.github.io/docs/wasm-bindgen/examples/without-a-bundler.html
-        import init from './pkg/package.js';
-        init('./pkg/package_bg.wasm');
+        import init from '/pkg/package.js';
+        init('/pkg/package_bg.wasm');
     </script>
   </body>
 </html>
