--- a/examples/todomvc/index.html
+++ b/examples/todomvc/index.html
@@ -21,8 +21,8 @@
 
     <script type="module">
       // https://rustwasm.github.io/docs/wasm-bindgen/examples/without-a-bundler.html
-      import init from './pkg/package.js';
-      init('./pkg/package_bg.wasm');
+      import init from '/pkg/package.js';
+      init('/pkg/package_bg.wasm');
     </script>
   </body>
 </html>
