--- a/examples/markdown/index.html
+++ b/examples/markdown/index.html
@@ -11,7 +11,8 @@
 
     <link rel="icon" type="image/png" href="/public/favicon.png" />
 
-    <!--<link rel="stylesheet" type="text/css" href="/style.css">-->
+    <!-- GitHub MD styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.css" integrity="sha256-jyWGtg7ocpUge8Zt/LotwFtPMWE23n7jgkHHw/Ejh+U=" crossorigin="anonymous" />
 
     <title>Markdown example</title>
 
