- Address more code review comments - Move service worker registration into `init` function - Add a `Clear Cache` button - Add an `Unregister Service Worker` button
Signed-off-by: johnsonw <wjohnson@whamcloud.com>

--- a/examples/service_worker/index.html
+++ b/examples/service_worker/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <section id="app"></section>
+  <script src="/public/subscribe.js" type="module"></script>
   <script type="module">
     import init from '/pkg/package.js';
     init('/pkg/package_bg.wasm');
